--- a/jjb/oom/oom-helm.yaml
+++ b/jjb/oom/oom-helm.yaml
@@ -18,6 +18,16 @@
         cd kubernetes/
         make common
         make {subproject}
+    oom_build_script_helm3: |
+        #!/bin/bash
+        set -e -o pipefail
+        cd kubernetes/
+        make HELM_BIN=helm3 all
+    subproject_build_script_helm3: |
+        #!/bin/bash
+        cd kubernetes/
+        make HELM_BIN=helm3 common
+        make HELM_BIN=helm3 {subproject}
     oom_post_build_script: !include-raw-escape: shell/publish_helm_charts.sh
 
     stream:
@@ -94,6 +104,9 @@
       - '{project-name}-{stream}-verify-helm':
           build_script: '{oom_build_script}'
           files: '**'
+      - '{project-name}-{stream}-verify-helm3':
+          build_script: '{oom_build_script_helm3}'
+          files: '**'
       - '{project-name}-{stream}-merge-helm':
           build_script: '{oom_build_script}'
           post_build_script: !include-raw-escape: shell/publish_helm_charts.sh
@@ -106,6 +119,8 @@
       # Below jobs disabled until future need.
       - '{project-name}-{subproject}-{stream}-verify-helm':
           build_script: '{subproject_build_script}'
+      - '{project-name}-{subproject}-{stream}-verify-helm3':
+          build_script: '{subproject_build_script_helm3}'
       - '{project-name}-{subproject}-{stream}-merge-helm':
           build_script: '{subproject_build_script}'
       - '{project-name}-{stream}-update-helm-weekly':
