Add certService Guilin job
Issue-ID: OOM-2559
Signed-off-by: Piotr Marcinkiewicz <piotr.marcinkiewicz@nokia.com>
Change-Id: Ib99edf41fb6013bcfb202edffd0f8b5f7576487a

--- a/jjb/oom-platform-cert-service/oom-platform-cert-service-csit.yaml
+++ b/jjb/oom-platform-cert-service/oom-platform-cert-service-csit.yaml
@@ -8,6 +8,8 @@
       stream:
           - "master":
                 branch: "master"
+          - "guilin":
+                branch: "guilin"
       functionality:
           - "certservice":
                 trigger_jobs:
