[DMAAP] Add/remove branch merge jobs
Change-Id: I566a7c9e839bda382ef0ca1b86f20370f5616c0c
Signed-off-by: efiacor <fiachra.corcoran@est.tech>
Issue-ID: DMAAP-1512

--- a/jjb/dmaap/dmaap-kafka.yaml
+++ b/jjb/dmaap/dmaap-kafka.yaml
@@ -9,6 +9,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'guilin':
+          branch: 'guilin'
     mvn-settings: 'dmaap-kafka11aaf-settings'
 
 - project:
