--- a/jjb/dmaap/dmaap-dbcapi.yaml
+++ b/jjb/dmaap/dmaap-dbcapi.yaml
@@ -17,32 +17,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'frankfurt':
-          branch: 'frankfurt'
-    # due to a strange macro / variable translation problem this needs to be
-    # passed as a string block to properly get the properties correctly defined
-    # in the job
-    maven-deploy-properties: |
-      deployAtEnd=true
-    files: '**'
-    archive-artifacts: ''
-
-- project:
-    name: dmaap-dbcapi-java8
-    project-name: 'dmaap-dbcapi'
-    jobs:
-      - '{project-name}-{stream}-verify-java'
-      - '{project-name}-{stream}-merge-java'
-      - gerrit-maven-stage:
-          sign-artifacts: true
-          build-node: centos7-builder-4c-4g
-          maven-versions-plugin: true
-    project: 'dmaap/dbcapi'
-    mvn-settings: 'dmaap-dbcapi-settings'
-    java-version: openjdk8
-    stream:
-      - 'elalto':
-          branch: 'elalto'
+      - 'guilin':
+          branch: 'guilin'
     # due to a strange macro / variable translation problem this needs to be
     # passed as a string block to properly get the properties correctly defined
     # in the job
