--- a/jjb/dmaap/dmaap-messagerouter-messageservice.yaml
+++ b/jjb/dmaap/dmaap-messagerouter-messageservice.yaml
@@ -14,6 +14,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'guilin':
+          branch: 'guilin'
     mvn-settings: 'dmaap-messagerouter-messageservice-settings'
     files: '**'
     archive-artifacts: ''
