--- a/jjb/dmaap/dmaap-messagerouter-mirroragent.yaml
+++ b/jjb/dmaap/dmaap-messagerouter-mirroragent.yaml
@@ -16,6 +16,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'guilin':
+          branch: 'guilin'
     mvn-settings: 'dmaap-messagerouter-mirroragent-settings'
     files: '**'
     archive-artifacts: ''
