Fix change I007a78a5e706f51cd0913f38ae9f0d48cea1ebad
Change-Id: If7ef387bbb55629d79a6c4b5b63f9ee6f9e0d7be
Issue-ID: INT-1725
Signed-off-by: Bartek Grzybowski <b.grzybowski@partner.samsung.com>

--- a/jjb/integration/simulators/integration-ran-simulator.yaml
+++ b/jjb/integration/simulators/integration-ran-simulator.yaml
@@ -7,7 +7,6 @@
                   branch: 'master'
       project: 'integration/simulators/ran-simulator'
       mvn-settings: 'integration-simulators-ran-simulator-settings'
-      files: 'ransim/**'
       maven-deploy-properties: |
           deployAtEnd=true
       archive-artifacts: ''
@@ -15,6 +14,7 @@
       jobs:
           - '{project-name}-{stream}-verify-java':
                 mvn-goals: 'clean install'
+                pattern: 'ransim/**'
           - '{project-name}-{stream}-merge-java':
                 mvn-goals: 'clean deploy'
           -  '{project-name}-gerrit-release-jobs':
