Add keycloak container creation jobs
Signed-off-by: Jakub Latusek <j.latusek@samsung.com>
Change-Id: I9fbbcebca9acab3da3b545b8a859804f7ec78fa0
Issue-ID: OOM-2640

--- a/jjb/oom-platform-keycloak/oom-platform-keycloak.yaml
+++ b/jjb/oom-platform-keycloak/oom-platform-keycloak.yaml
@@ -12,3 +12,55 @@
     build-node: centos7-builder-2c-1g
     jobs:
       - gerrit-info-yaml-verify
+
+- project:
+      name: oom-platform-keycloak-linters
+      project: oom/platform/keycloak
+      project-name: oom-platform-keycloak
+      python-version: python3
+      jobs:
+          - oom-linters
+      subproject:
+          - 'yaml':
+                tox-dir: '.'
+                tox-envs: 'yaml'
+                pattern: '**/*.yaml'
+          - 'yml':
+                tox-dir: '.'
+                tox-envs: 'yaml'
+                pattern: '**/*.yml'
+          - 'py':
+                tox-dir: '.'
+                tox-envs: 'python'
+                pattern: '**/*.python'
+      stream:
+          - 'master':
+                branch: 'master'
+          - 'frankfurt':
+                branch: 'frankfurt'
+
+- project:
+   name: oom-platform-keycloak-release
+   project-name: oom-platform-keycloak
+   project: oom/platform/keycloak
+   mvn-settings: 'oom-settings'
+   jobs:
+     - '{project-name}-gerrit-release-jobs':
+         build-node: centos7-docker-8c-8g
+
+- project:
+    name: 'oom-platform-keycloak-docker'
+    jobs:
+      - gerrit-docker-verify
+      - gerrit-docker-merge
+    project-name: 'oom-platform-keycloak'
+    project: 'oom/platform/keycloak'
+    stream:
+      - 'master':
+            branch: 'master'
+            files: ''
+    docker-name: 'onap/oom/keycloak'
+    docker-build-args: '-f ./Dockerfile'
+    docker-root: '$WORKSPACE'
+    mvn-settings: 'oom-settings'
+    build-node: ubuntu1804-docker-8c-8g
