[OOM] Build-timeout for helm verify jobs to 240
The initial commit for this change (66d7747) changed the timeout only
for image-verify jobs, and did so directly in the job template. This
change includes the helm-verify jobs, and sets the timeout in the
calling template.

Change-Id: I80cbe130d3baf0d5671dcc12565e838abf376fe5
Issue-ID: OOM-1
Signed-off-by: Eric Ball <eball@linuxfoundation.org>

--- a/jjb/oom/oom-helm.yaml
+++ b/jjb/oom/oom-helm.yaml
@@ -91,9 +91,11 @@
     jobs:
       - '{project-name}-{stream}-image-verify':
           files: '**'
+          build-timeout: 240
       - '{project-name}-{stream}-verify-helm':
           build_script: '{oom_build_script}'
           files: '**'
+          build-timeout: 240
       - '{project-name}-{stream}-merge-helm':
           build_script: '{oom_build_script}'
           post_build_script: !include-raw-escape: shell/publish_helm_charts.sh
