--- a/jjb/ccsdk/sli.yaml
+++ b/jjb/ccsdk/sli.yaml
@@ -17,6 +17,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'guilin':
+          branch: 'guilin'
     java-version: openjdk11
     mvn-version: 'mvn36'
     mvn-settings: 'ccsdk-sli-settings'
@@ -61,6 +63,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'guilin':
+          branch: 'guilin'
     java-version: openjdk11
     mvn-version: 'mvn36'
     mvn-settings: 'ccsdk-sli-settings'
