Create guilin testsuite docker jjb
Issue-ID: TEST-283

Signed-off-by: mrichomme <morgan.richomme@orange.com>
Change-Id: I6718169382252d1c83443ad4942f76bfcef5c1ce

--- a/jjb/testsuite/testsuite.yaml
+++ b/jjb/testsuite/testsuite.yaml
@@ -27,8 +27,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'elalto':
-          branch: 'elalto'
+      - 'guilin':
+          branch: 'guilin'
     mvn-settings: 'testsuite-settings'
 
 - project:
