Upgrade java in SDC Dist Client to java11
Issue-ID: SDC-3400
Signed-off-by: Edyta Krukowska <edyta.krukowska@nokia.com>
Change-Id: I61a2ccd389325bdb40ec7803a11810ad549d91e5

--- a/jjb/sdc/sdc-sdc-distribution-client.yaml
+++ b/jjb/sdc/sdc-sdc-distribution-client.yaml
@@ -22,10 +22,13 @@
     stream:
       - 'master':
           branch: 'master'
+          java-version: openjdk11
       - 'guilin':
           branch: 'guilin'
+          java-version: openjdk8
       - 'frankfurt':
           branch: 'frankfurt'
+          java-version: openjdk8
     mvn-settings: 'sdc-sdc-distribution-client-settings'
     files: '**'
     archive-artifacts: ''
