--- a/project.config
+++ b/project.config
@@ -5,6 +5,7 @@
 [access "refs/*"]
 	viewDrafts = group Anonymous Users
 	read = group GitHub Replication
+	owner = group saml/onap-gerrit-ci-management-committers
 [access "refs/heads/*"]
 	submit = deny group Release Engineering Team
 	label-Code-Review = deny -2..+2 group Release Engineering Team
