[OOM] add doc linting
Add 3 more linters in order to valid correct documentation for OOM.

Issue-ID: OOM-2648
Signed-off-by: Sylvain Desbureaux <sylvain.desbureaux@orange.com>
Change-Id: I8cb78b94e9ce69cbd409b401a52e5361e58e89d2

--- a/jjb/oom/oom-main-linter.yaml
+++ b/jjb/oom/oom-main-linter.yaml
@@ -10,6 +10,18 @@
           tox-dir: "."
           tox-envs: "gitlint"
           pattern: "**"
+      - "doc8":
+          tox-dir: "."
+          tox-envs: "doc8"
+          pattern: "docs/**"
+      - "linkcheck":
+          tox-dir: "."
+          tox-envs: "docs-linkcheck"
+          pattern: "docs/**"
+      - "sphinx":
+          tox-dir: "."
+          tox-envs: "docs"
+          pattern: "docs/**"
     stream:
       - "master":
           branch: "master"
