Add verification jobs for ccsdk/distribution
 - replace existing CCSDK CSIT jobs with project-specific CSIT job
 - add docker snapshot and docker staging jobs - snapshot images are
   still being done with maven, but tagging the images with STAGING
   is moved from maven to plain shell script (both of these have been
   implemented in https://gerrit.onap.org/r/c/ccsdk/distribution/+/116082)
 - add maven docker snapshot job template to support UNIQUE_DOCKER_TAG
 - note that this commit requires
   https://gerrit.onap.org/r/c/ccsdk/distribution/+/116082 to work
   properly in review and merge verification phases!

Issue-ID: CCSDK-3018, CCSDK-3019
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: Id4c922e180c9d0ddadae6c99632d6ff6cdcbb59f

--- a/jjb/ccsdk/ccsdk-csit.yaml
+++ b/jjb/ccsdk/ccsdk-csit.yaml
@@ -1,17 +1,22 @@
 ---
 - project:
-    name: ccsdk-csit
+    name: ccsdk-distribution-csit
     jobs:
-      - '{project-name}-{stream}-verify-csit-{functionality}'
-      - '{project-name}-{stream}-csit-{functionality}'
-    project-name: 'ccsdk'
+      - '{project-name}-{stream}-project-csit'
+      - '{project-name}-review-verification-{stream}'
+      - '{project-name}-merge-verification-{stream}'
+    project-name: 'ccsdk-distribution'
     recipients: 'dtimoney@att.com'
+    # project name in gerrit
+    project: 'ccsdk/distribution'
     stream:
       - 'master':
           branch: 'master'
-    functionality:
-      - 'healthcheck':
-          trigger_jobs:
+    artifact-type: 'maven'
+    java-version: openjdk11
+    mvn-version: 'mvn36'
+    mvn-settings: 'ccsdk-distribution-settings'
+    mvn-global-settings: global-settings
     robot-options: ''
     branch: 'master'
 
