--- a/jjb/global-defaults.yaml
+++ b/jjb/global-defaults.yaml
@@ -11,6 +11,8 @@
     build-artifact-days-to-keep: -1
     build-artifact-num-to-keep: 5
 
+    failure-notification: "releng+onap@linuxfoundation.org"
+
     # lf-infra defaults
     lftools-version: <1.0.0
 
