Add gitlint for integration/xtesting verif job
It shall help improving the quality of the commit message

Issue-ID: INT-1809

Signed-off-by: mrichomme <morgan.richomme@orange.com>
Change-Id: I01716658ec82ae2e9aeb1f1d963cd94f839639c9

--- a/jjb/integration/xtesting/integration-xtesting.yaml
+++ b/jjb/integration/xtesting/integration-xtesting.yaml
@@ -16,6 +16,10 @@
       jobs:
           - integration-linters
       subproject:
+          - 'commit':
+                tox-dir: '.'
+                tox-envs: 'gitlint'
+                pattern: '**'
           - 'yaml':
                 tox-dir: '.'
                 tox-envs: 'yaml'
@@ -35,6 +39,10 @@
       stream:
           - 'master':
                 branch: 'master'
+          - 'frankfurt':
+                branch: 'frankfurt'
+          - 'guilin':
+                branch: 'guilin'
 
 - project:
     name: integration-xtesting-release
@@ -102,9 +110,6 @@
     stream:
       - 'master':
             branch: 'master'
-            files: ''
-      - 'frankfurt':
-            branch: 'frankfurt'
             files: ''
       - 'guilin':
             branch: 'guilin'
