Add verify jobs for packer
These jobs will allow us to run a packer build
before the change is merged. It's more complete
than just running the simple verify packer which only
validates the templates.

Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>
Change-Id: I003fa8675f7ebc4471126820269aaf7900460866

--- a/jjb/ci-management/ci-management-packer-jobs.yaml
+++ b/jjb/ci-management/ci-management-packer-jobs.yaml
@@ -3,6 +3,7 @@
     name: packer-builder-jobs
     jobs:
       - gerrit-packer-merge
+      - gerrit-packer-verify-build
 
     project: ci-management
     project-name: ci-management
@@ -22,6 +23,7 @@
     name: packer-docker-jobs
     jobs:
       - gerrit-packer-merge
+      - gerrit-packer-verify-build
 
     project: ci-management
     project-name: ci-management
@@ -42,6 +44,7 @@
     name: packer-memcached-jobs
     jobs:
       - gerrit-packer-merge
+      - gerrit-packer-verify-build
 
     project: ci-management
     project-name: ci-management
@@ -60,6 +63,7 @@
     name: packer-redis-jobs
     jobs:
       - gerrit-packer-merge
+      - gerrit-packer-verify-build
 
     project: ci-management
     project-name: ci-management
@@ -77,6 +81,7 @@
     name: packer-helm-jobs
     jobs:
       - gerrit-packer-merge
+      - gerrit-packer-verify-build
 
     project: ci-management
     project-name: ci-management
