--- a/packer/provision/helm.yaml
+++ b/packer/provision/helm.yaml
@@ -41,21 +41,25 @@
       block:
         - name: create directory
           file:
-            path: /tmp/helm3
+            path: helm3
             state: directory
         - name: 'Fetch tar.gz'
           get_url:
             url: "https://get.helm.sh/helm-v{{helm3_version}}-linux-amd64.tar.gz"
-            dest: "/tmp/helm3/helm-v{{helm3_version}}-linux-amd64.tar.gz"
+            dest: "helm3/helm-v{{helm3_version}}-linux-amd64.tar.gz"
         - name: 'Unarchive'
           unarchive:
-            src: "/tmp/helm3/helm-v{{helm3_version}}-linux-amd64.tar.gz"
-            dest: /tmp/helm3
+            src: "helm3/helm-v{{helm3_version}}-linux-amd64.tar.gz"
+            dest: helm3
             remote_src: true
           become: yes
         - name: 'Move helm to /usr/local/bin and set as executable'
-          command: 'mv /tmp/helm3/linux-amd64/helm /usr/local/bin/helm3'
+          command: 'mv helm3/linux-amd64/helm /usr/local/bin/helm3'
           become: yes
+        - name: Remove unused helm3 source
+          file:
+            path: helm3
+            state: absent
         - name: 'Check helm3.'
           command: 'which helm3'
         - name: 'Check kubectl.'
