--- a/packer/provision/helm.yaml
+++ b/packer/provision/helm.yaml
@@ -46,7 +46,7 @@
         - name: 'Fetch tar.gz'
           get_url:
             url: "https://get.helm.sh/helm-v{{helm3_version}}-linux-amd64.tar.gz"
-            dest: "/tmp/helm3/helm-v{{helm3_version}}-linux-amd64.tar.gz"
+            dest: /tmp/helm3
         - name: 'Unarchive'
           unarchive:
             src: "/tmp/helm3/helm-v{{helm3_version}}-linux-amd64.tar.gz"
@@ -60,6 +60,15 @@
           command: 'which helm3'
         - name: 'Check kubectl.'
           command: 'which kubectl'
+
+        - name: Install helm3
+          shell: |
+             echo "----> Installing helm3"
+             wget 'https://get.helm.sh/helm-v3.3.4-linux-amd64.tar.gz'
+             tar -xvf 'https://get.helm.sh/helm-v3.3.4-linux-amd64.tar.gz'
+             mv linux-amd64/helm /usr/local/bin/helm3
+             which helm3
+          become: true
 
     - name: 'Install ChartMuseum {{chartmuseum_version}}'
       block:
