Add robot linter for new use cases
Issue-ID: TEST-285

Signed-off-by: mrichomme <morgan.richomme@orange.com>
Change-Id: I63c6ce91e5446420e644c18ee74225acba749ad9

--- a/jjb/testsuite/testsuite.yaml
+++ b/jjb/testsuite/testsuite.yaml
@@ -60,10 +60,10 @@
           tox-dir: '.'
           tox-envs: 'json'
           pattern: '**/*.json'
-#      - 'robot':
-#          tox-dir: '.'
-#          tox-envs: 'robot'
-#          pattern: '**/*.robot'
+      - 'robot':
+          tox-dir: '.'
+          tox-envs: 'robot'
+          pattern: 'robot/assets/usecases/*.robot'
     stream:
       - 'master':
           branch: 'master'
