Add maven executable to docker snapshot job
 - follow-up and correction to
   https://gerrit.onap.org/r/c/ci-management/+/116262

Issue-ID: CCSDK-3019
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: I6eca59766404350878dc30e8cf5ce837616512c6

--- a/jjb/ccsdk/distribution.yaml
+++ b/jjb/ccsdk/distribution.yaml
@@ -26,6 +26,7 @@
           container-snapshot-registry: 'nexus3.onap.org:10003'
           mvn-params: '-Dmaven.test.skip=true -P docker'
           maven-versions-plugin: true
+          maven-version: 'mvn36'
       - '{project-name}-{stream}-docker-staging':
           script:
             !include-raw-escape: 'tag-ccsdk-distribution-images-staging.sh'
