--- a/jjb/integration/integration-maven-jobs.yaml
+++ b/jjb/integration/integration-maven-jobs.yaml
@@ -136,5 +136,7 @@
           branch: '{branch}'
           refspec: 'refs/heads/{branch}'
           artifacts: '{archive-artifacts}'
+      - maven-exec:
+          maven-version: '{maven-version}'
       - integration-unique-docker-tag:
           unique-docker-tag: ''
