Add maven parameters to docker snapshot job
  - *another* follow-up and correction to
    https://gerrit.onap.org/r/c/ci-management/+/116262

Issue-ID: CCSDK-3019
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: I0bb509a3b2bb1f230fde487d957f9f397b83851a

--- a/jjb/integration/integration-maven-jobs.yaml
+++ b/jjb/integration/integration-maven-jobs.yaml
@@ -120,7 +120,7 @@
     mvn-goals: clean deploy
     mvn-opts: ""
     mvn-params: ""
-    mvn-version: mvn35
+    maven-version: mvn36
     ossrh-profile-id: ""
     mvn-pom: ""
     sign-artifacts: false
@@ -138,5 +138,8 @@
           artifacts: '{archive-artifacts}'
       - maven-exec:
           maven-version: '{maven-version}'
+      - maven-params:
+          mvn-params: '{mvn-params}'
+
       - integration-unique-docker-tag:
           unique-docker-tag: ''
