[Linter] Fix robot linter path for testsuite
use the right path
and use it in master and also in guilin

Issue-ID: TEST-285

Signed-off-by: mrichomme <morgan.richomme@orange.com>
Change-Id: Iea8f48d357b86d22bd65273fbacba9c3cc865850

--- a/jjb/testsuite/testsuite.yaml
+++ b/jjb/testsuite/testsuite.yaml
@@ -63,7 +63,9 @@
       - 'robot':
           tox-dir: '.'
           tox-envs: 'robot'
-          pattern: 'robot/assets/usecases/*.robot'
+          pattern: 'robot/testsuites/usecases/*.robot'
     stream:
       - 'master':
           branch: 'master'
+      - 'guilin':
+          branch: 'guilin'
