Setup linters for integration/simulators/masspnf-simulator repo
Change-Id: I915d29ee2780a939bab3af0ca5b09025ee6d7bdb
Issue-ID: INT-1810
Signed-off-by: Bartek Grzybowski <b.grzybowski@partner.samsung.com>

--- a/jjb/integration/simulators/integration-masspnf-simulator.yaml
+++ b/jjb/integration/simulators/integration-masspnf-simulator.yaml
@@ -36,3 +36,35 @@
     mvn-settings: 'integration-settings'
     files: '**'
     archive-artifacts: ''
+
+- project:
+    name: integration-simulators-masspnf-simulator-linters
+    project: 'integration/simulators/masspnf-simulator'
+    project-name: 'integration-simulators-masspnf-simulator'
+    python-version: python3
+    jobs:
+      - integration-linters
+    subproject:
+      - 'yaml':
+          tox-dir: '.'
+          tox-envs: 'yaml'
+          pattern: '**/*.yaml'
+      - 'yml':
+          tox-dir: '.'
+          tox-envs: 'yaml'
+          pattern: '**/*.yml'
+      - 'json':
+          tox-dir: '.'
+          tox-envs: 'json'
+          pattern: '**/*.json'
+      - 'python':
+          tox-dir: '.'
+          tox-envs: 'py'
+          pattern: '**/*.py'
+      - 'md':
+          tox-dir: '.'
+          tox-envs: 'md'
+          pattern: '**/*.md'
+    stream:
+      - 'master':
+          branch: 'master'
