Fix documentation generation in vnfsdk upload docs job
Signed-off-by: Bartosz Gardziejewski <bartosz.gardziejewski@nokia.com>
Change-Id: I5699008a27a999640a08ef86d8bb7a5ac2b96fed
Issue-ID: VNFSDK-696

--- a/jjb/vnfsdk/vnfsdk-validation.yaml
+++ b/jjb/vnfsdk/vnfsdk-validation.yaml
@@ -70,11 +70,11 @@
       project-name: 'vnfsdk-requirements'
       mvn-settings: 'vnfsdk-validation-settings'
       mvn-global-settings: 'global-settings'
-      mvn-goals: 'clean install -DskipDocsGeneration=false'
       stream:
           - 'master':
                 branch: 'master'
       jobs:
           - '{project-name}-{stream}-build-and-upload':
+                pre_script: !include-raw-escape: ./generate-dosc.sh
                 project_id: org.onap.vnfsdk.refrepo
                 post_script: !include-raw-escape: ./upload-artifact.sh
