Enabling docker for all CPS build in order to support test containers
Issue-ID: CPS-124
Change-Id: I3eb8f3086310329edb08ff1b07e1eee7e61ad665
Signed-off-by: Ruslan Kashapov <ruslan.kashapov@pantheon.tech>

--- a/jjb/cps/cps.yaml
+++ b/jjb/cps/cps.yaml
@@ -39,7 +39,7 @@
       - '{project-name}-{stream}-merge-java'
       - gerrit-maven-stage:
           sign-artifacts: true
-          build-node: centos7-builder-4c-4g
+          build-node: centos7-docker-8c-8g
           maven-versions-plugin: true
       - gerrit-maven-docker-stage:
           build-node: centos7-docker-8c-8g
@@ -55,7 +55,7 @@
     mvn-settings: 'cps-settings'
     files: '**'
     archive-artifacts: ''
-    build-node: ubuntu1804-builder-4c-4g
+    build-node: centos7-docker-8c-8g
 
 - project:
     name: cps-sonar
@@ -70,7 +70,7 @@
     sonarcloud-project-key: '{sonarcloud_project_organization}_{project-name}'
     sonar-mvn-goal: '{sonar_mvn_goal}'
     cron: '@daily'
-    build-node: ubuntu1804-builder-4c-4g
+    build-node: centos7-docker-8c-8g
     project: 'cps'
     project-name: 'cps'
     branch: 'master'
