Fix docker snapshot job choosing-strategy
  - choosing-strategy should be "gerrit" to make the job to
    checkout the job from given GERRIT_REFSPEC instead of master
  - hopefully final follow-up correction to
    https://gerrit.onap.org/r/c/ci-management/+/116262

Issue-ID: CCSDK-3019
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: I400895a68cb6cb1e89fed1e75c9751abba59cc2e

--- a/jjb/integration/integration-maven-jobs.yaml
+++ b/jjb/integration/integration-maven-jobs.yaml
@@ -46,7 +46,7 @@
           submodule-recursive: "{submodule-recursive}"
           submodule-timeout: "{submodule-timeout}"
           submodule-disable: "{submodule-disable}"
-          choosing-strategy: default
+          choosing-strategy: "gerrit"
 
     wrappers:
       - lf-infra-wrappers:
